add a project to portfolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2 class="sisennys-2rem">Ohjelmointi 45 osp</h2>
                 <h3><a href="https://www.w3schools.com">W3</a></h3>
                 <h3 class="sisennys-4rem">HTML5 ja CSS3 tehtävät</a></h3>
-                <a href="https://devopsum.github.io/01_responsive-figures/" target="_blank">Images made responsive</a>
+                <a href="https://mnemicon.github.io/responsive-figures/" target="_blank">Images made responsive</a>
                 <p><a href="gittipolku"></a>8</p>
                 <p><a href="gittipolku"></a>9</p>
                 <p><a href="gittipolku"></a>10</p>
@@ -45,8 +45,8 @@
         <h1 class="sisennys-1rem">Angular-ohjelmointi 30 osp</h1>
             <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen ohjelmistokomponenttikirjastolla 30 osp</h2>
                 <h3 class="sisennys-4rem">Angular-perusteet</h3>
-                <a href="https://github.com/devopsum/hello-cli" target="_blank">Hello CLI repo</a><br>
-                <a href="https://devopsum.github.io/hello-cli/" target="_blank">Hello CLI</a>
+                <a href="https://mnemicon.github.io/hello-cli/" target="_blank">Hello CLI</a>
+                <a href="https://github.com/mnemicon/hello-cli" target="_blank">Hello CLI repo</a><br>
                 <p><a href="gittipolku"></a>42</p>
                 <p><a href="gittipolku"></a>43</p>
                 <h3 class="sisennys-4rem">Angular-jatko</h3>
