add new project to portfolio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <h3 class="sisennys-4rem">Angular-perusteet</h3>
                 <a href="https://mnemicon.github.io/hello-cli/" target="_blank">Hello CLI</a>
                 <a href="https://github.com/mnemicon/hello-cli" target="_blank">Hello CLI repo</a><br>
-                <p><a href="gittipolku"></a>42</p>
+                <a href="https://mnemicon.github.io/angular-ja-bootstrap/" target="_blank">Hello CLI</a>
+                <a href="https://github.com/mnemicon/angular-ja-bootstrap" target="_blank">Bootstrap repo</a><br>
                 <p><a href="gittipolku"></a>43</p>
                 <h3 class="sisennys-4rem">Angular-jatko</h3>
                 <p><a href="gittipolku"></a>56</p>
