add my-dream-app to portfolio

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                 <h3 class="sisennys-4rem">Angular-perusteet</h3>
                 <a href="https://mnemicon.github.io/hello-cli/" target="_blank">Hello CLI</a>
                 <a href="https://github.com/mnemicon/hello-cli" target="_blank">Hello CLI repo</a><br>
-                <a href="https://mnemicon.github.io/angular-ja-bootstrap/" target="_blank">Hello CLI</a>
-                <a href="https://github.com/mnemicon/angular-ja-bootstrap" target="_blank">Bootstrap repo</a><br>
+                <a href="https://mnemicon.github.io/angular-ja-bootstrap/" target="_blank">Angular ja Bootstrap</a>
+                <a href="https://github.com/mnemicon/angular-ja-bootstrap" target="_blank">Angular ja Bootstrap repo</a><br>
+                <a href="https://mnemicon.github.io/my-dream-app/" target="_blank">My Dream App</a>
+                <a href="https://github.com/mnemicon/my-dream-app" target="_blank">My Dream App repo</a><br>
                 <p><a href="gittipolku"></a>43</p>
                 <h3 class="sisennys-4rem">Angular-jatko</h3>
                 <p><a href="gittipolku"></a>56</p>
