--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 <a href="https://github.com/mnemicon/my-dream-app" target="_blank">My Dream App repo</a><br>
                 <a href="https://mnemicon.github.io/warning-et-success/" target="_blank">Warning & Success</a>
                 <a href="https://github.com/mnemicon/warning-et-success" target="_blank">Warning & Success repo</a><br>
+                <a href="https://mnemicon.github.io/sovella-databindingia/" target="_blank">Sovellan databindingia</a>
+                <a href="https://github.com/mnemicon/sovella-databindingia" target="_blank">Sovellan databindingia repo</a><br>
                 <p><a href="gittipolku"></a>43</p>
                 <h3 class="sisennys-4rem">Angular-jatko</h3>
                 <p><a href="gittipolku"></a>56</p>
