Add ng-directive ja tour-of-heroes projects to portfolio

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <a href="https://github.com/mnemicon/warning-et-success" target="_blank">Warning & Success repo</a><br>
                 <a href="https://mnemicon.github.io/sovella-databindingia/" target="_blank">Sovellan databindingia</a>
                 <a href="https://github.com/mnemicon/sovella-databindingia" target="_blank">Sovellan databindingia repo</a><br>
+                <a href="https://mnemicon.github.io/sovella-ng-dir/" target="_blank">Sovellan ng-directiveä</a>
+                <a href="https://github.com/mnemicon/sovella-ng-dir" target="_blank">Sovellan ng-directiveä repo</a><br>
+                <a href="https://mnemicon.github.io/angular-tour-of-heroes/" target="_blank">Tour of Heroes</a>
+                <a href="https://github.com/mnemicon/angular-tour-of-heroes" target="_blank">Tour of Heroes repo</a><br>
                 <p><a href="gittipolku"></a>43</p>
                 <h3 class="sisennys-4rem">Angular-jatko</h3>
                 <p><a href="gittipolku"></a>56</p>
