Add group project 1 Spring Boot

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p><a href="gittipolku"></a>26</p>
                 <p><a href="gittipolku"></a>27</p>
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 1</h3>
-                <p><a href="gittipolku"></a>PR1</p>
+                <a href="https://github.com/mnemicon/SantaService" target="_blank">SantaService (Spring Boot)</a>
             <h2 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h2>
                 <h3 class="sisennys-4rem">Spring Boot</h3>
                 <p><a href="gittipolku"></a>PR1</p>
