--- a/index.html
+++ b/index.html
@@ -59,12 +59,9 @@
                 <a href="https://github.com/mnemicon/sovella-ng-dir" target="_blank">Sovellan ng-directiveä repo</a><br>
                 <a href="https://mnemicon.github.io/angular-tour-of-heroes/" target="_blank">Tour of Heroes</a>
                 <a href="https://github.com/mnemicon/angular-tour-of-heroes" target="_blank">Tour of Heroes repo</a><br>
-                <p><a href="gittipolku"></a>43</p>
                 <h3 class="sisennys-4rem">Angular-jatko</h3>
-                <p><a href="gittipolku"></a>56</p>
-                <p><a href="gittipolku"></a>57</p>
-                <p><a href="gittipolku"></a>58</p>
-                <p><a href="gittipolku"></a>59</p>
+                <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a>
+                <a href="https://github.com/mnemicon/tuoteluettelo" target="_blank">Tuoteluettelo repo</a><br>
     </article>
     <footer class="ops">
         <p class="footer-p">&mdash; My Little Portfolio &mdash;</p>
