add project names to portfolio

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
                 <a href="https://github.com/mnemicon/SantaService" target="_blank">SantaService (Spring Boot)</a>
             <h2 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h2>
                 <h3 class="sisennys-4rem">Spring Boot</h3>
-                <p><a href="gittipolku"></a>PR1</p>
-                <p><a href="gittipolku"></a>PR2</p>
+                <a href="linkkilista">Projekti 1: Linkkilista</a>
+                <a href="kahvikauppa">Projekti 2: Kahvikauppa</a>
+                <h3 class="sisennys-4rem">SQL ja tietorakenteet</h3>
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2</h3>
-                <p><a href="gittipolku"></a>PR2</p>
+                <a href="hkiapp">Helsinki sights app</a>
         <h1 class="sisennys-1rem">Angular-ohjelmointi 30 osp</h1>
             <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen ohjelmistokomponenttikirjastolla 30 osp</h2>
                 <h3 class="sisennys-4rem">Angular-perusteet</h3>
