Update content structure

--- a/index.html
+++ b/index.html
@@ -14,35 +14,25 @@
             <a href="./"><img src="./images/BC-logo-beige.png" alt="koulun logo"></a>
         </figure>
         <h1 class="sisennys-1rem">Student credentials</h1>
-        <h2>Java21S - Application development with Java, Spring Boot and Angular</h2>
-        <h3>snumber</h3>
+        <h2>Java21S - Application development using Java, Spring Boot and Angular</h2>
+        <!-- <h3>snumber</h3> -->
         <h3>PORTFOLIO</h3>
     </header>
     <article class="ops">
         <h1 class="sisennys-1rem">Ohjelmistokehittäjä 90 osp</h1>
             <h2 class="sisennys-2rem">Ohjelmointi 45 osp</h2>
-                <h3><a href="https://www.w3schools.com">W3</a></h3>
-                <h3 class="sisennys-4rem">HTML5 ja CSS3 tehtävät</a></h3>
-                <a href="https://mnemicon.github.io/responsive-figures/" target="_blank">Images made responsive</a>
-                <p><a href="gittipolku"></a>8</p>
-                <p><a href="gittipolku"></a>9</p>
-                <p><a href="gittipolku"></a>10</p>
-                <p><a href="gittipolku"></a>11</p>
-                <h3 class="sisennys-4rem">JavaScript- ja TypeScript-ohjelmointi tehtävät</h3>
-                <p><a href="gittipolku"></a>23</p>
-                <p><a href="gittipolku"></a>24</p>
-                <p><a href="gittipolku"></a>25</p>
-                <p><a href="gittipolku"></a>26</p>
-                <p><a href="gittipolku"></a>27</p>
-                <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 1</h3>
-                <a href="https://github.com/mnemicon/SantaService" target="_blank">SantaService (Spring Boot)</a>
+                <h3 class="sisennys-4rem">HTML5 ja CSS3 perusteet</a></h3>
+                <!-- <a href="https://mnemicon.github.io/responsive-figures/" target="_blank">Images made responsive</a> -->
+                <h3 class="sisennys-4rem">JavaScript- ja TypeScript-ohjelmointi perusteet</h3>
+                <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 1 (HTML), 6vk</h3>
+                <a href="https://github.com/mnemicon/SantaService" target="_blank">SantaService</a>
             <h2 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h2>
                 <h3 class="sisennys-4rem">Spring Boot</h3>
-                <a href="linkkilista">Projekti 1: Linkkilista</a>
-                <a href="kahvikauppa">Projekti 2: Kahvikauppa</a>
+                <!-- <a href="linkkilista">Projekti 1: Linkkilista</a><br>
+                <a href="kahvikauppa">Projekti 2: Kahvikauppa</a> -->
                 <h3 class="sisennys-4rem">SQL ja tietorakenteet</h3>
-                <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2</h3>
-                <a href="hkiapp">Helsinki sights app</a>
+                <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2 (Angular), 8vk</h3>
+                <!-- <a href="hkiapp">Helsinki sights app</a> -->
         <h1 class="sisennys-1rem">Angular-ohjelmointi 30 osp</h1>
             <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen ohjelmistokomponenttikirjastolla 30 osp</h2>
                 <h3 class="sisennys-4rem">Angular-perusteet</h3>
@@ -58,11 +48,17 @@
                 <a href="https://github.com/mnemicon/sovella-databindingia" target="_blank">Sovellan databindingia repo</a><br>
                 <a href="https://mnemicon.github.io/sovella-ng-dir/" target="_blank">Sovellan ng-directiveä</a>
                 <a href="https://github.com/mnemicon/sovella-ng-dir" target="_blank">Sovellan ng-directiveä repo</a><br>
+                <h3 class="sisennys-4rem">Angular-jatko</h3>
                 <a href="https://mnemicon.github.io/angular-tour-of-heroes/" target="_blank">Tour of Heroes</a>
                 <a href="https://github.com/mnemicon/angular-tour-of-heroes" target="_blank">Tour of Heroes repo</a><br>
-                <h3 class="sisennys-4rem">Angular-jatko</h3>
-                <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a>
-                <a href="https://github.com/mnemicon/tuoteluettelo" target="_blank">Tuoteluettelo repo</a><br>
+                <a href="https://mnemicon.github.io/scrimba/" target="_blank">Scrimba</a>
+                <a href="https://github.com/mnemicon/scrimba" target="_blank">Scrimba repo</a><br>
+                <!-- <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a>
+                <a href="https://github.com/mnemicon/tuoteluettelo" target="_blank">Tuoteluettelo repo</a><br> -->
+    </article>
+    <h3><a href="https://www.w3schools.com">W3</a></h3>
+    <article>
+
     </article>
     <footer class="ops">
         <p class="footer-p">&mdash; My Little Portfolio &mdash;</p>
