Update layout.css and index.html content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - </title>
+    <title>Portfolio - Haarahiltunen</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/layout.css">
 </head>
@@ -13,7 +13,7 @@
         <figure id="logo">
             <a href="./"><img src="./images/BC-logo-beige.png" alt="koulun logo"></a>
         </figure>
-        <h1 class="sisennys-1rem">Student credentials</h1>
+        <h1 class="sisennys-1rem">M. Haarahiltunen</h1>
         <h2>Java21S - Application development using Java, Spring Boot and Angular</h2>
         <!-- <h3>snumber</h3> -->
         <h3>PORTFOLIO</h3>
@@ -34,31 +34,37 @@
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2 (Angular), 8vk</h3>
                 <!-- <a href="hkiapp">Helsinki sights app</a> -->
         <h1 class="sisennys-1rem">Angular-ohjelmointi 30 osp</h1>
-            <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen ohjelmistokomponenttikirjastolla 30 osp</h2>
+            <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen komponenttikirjastolla 30 osp</h2>
                 <h3 class="sisennys-4rem">Angular-perusteet</h3>
-                <a href="https://mnemicon.github.io/hello-cli/" target="_blank">Hello CLI</a>
-                <a href="https://github.com/mnemicon/hello-cli" target="_blank">Hello CLI repo</a><br>
-                <a href="https://mnemicon.github.io/angular-ja-bootstrap/" target="_blank">Angular ja Bootstrap</a>
-                <a href="https://github.com/mnemicon/angular-ja-bootstrap" target="_blank">Angular ja Bootstrap repo</a><br>
-                <a href="https://mnemicon.github.io/my-dream-app/" target="_blank">My Dream App</a>
-                <a href="https://github.com/mnemicon/my-dream-app" target="_blank">My Dream App repo</a><br>
-                <a href="https://mnemicon.github.io/warning-et-success/" target="_blank">Warning & Success</a>
-                <a href="https://github.com/mnemicon/warning-et-success" target="_blank">Warning & Success repo</a><br>
-                <a href="https://mnemicon.github.io/sovella-databindingia/" target="_blank">Sovellan databindingia</a>
-                <a href="https://github.com/mnemicon/sovella-databindingia" target="_blank">Sovellan databindingia repo</a><br>
-                <a href="https://mnemicon.github.io/sovella-ng-dir/" target="_blank">Sovellan ng-directiveä</a>
-                <a href="https://github.com/mnemicon/sovella-ng-dir" target="_blank">Sovellan ng-directiveä repo</a><br>
+                <div class="sisennys-6rem">
+                    <a href="https://mnemicon.github.io/hello-cli/" target="_blank">Hello CLI</a>
+                    <a href="https://github.com/mnemicon/hello-cli" target="_blank">Hello CLI repo</a><br>
+                    <a href="https://mnemicon.github.io/angular-ja-bootstrap/" target="_blank">Angular ja Bootstrap</a>
+                    <a href="https://github.com/mnemicon/angular-ja-bootstrap" target="_blank">Angular ja Bootstrap repo</a><br>
+                    <a href="https://mnemicon.github.io/my-dream-app/" target="_blank">My Dream App</a>
+                    <a href="https://github.com/mnemicon/my-dream-app" target="_blank">My Dream App repo</a><br>
+                    <a href="https://mnemicon.github.io/warning-et-success/" target="_blank">Warning & Success</a>
+                    <a href="https://github.com/mnemicon/warning-et-success" target="_blank">Warning & Success repo</a><br>
+                    <a href="https://mnemicon.github.io/sovella-databindingia/" target="_blank">Sovellan databindingia</a>
+                    <a href="https://github.com/mnemicon/sovella-databindingia" target="_blank">Sovellan databindingia repo</a><br>
+                    <a href="https://mnemicon.github.io/sovella-ng-dir/" target="_blank">Sovellan ng-directiveä</a>
+                    <a href="https://github.com/mnemicon/sovella-ng-dir" target="_blank">Sovellan ng-directiveä repo</a>
+                </div><br>
                 <h3 class="sisennys-4rem">Angular-jatko</h3>
-                <a href="https://mnemicon.github.io/angular-tour-of-heroes/" target="_blank">Tour of Heroes</a>
-                <a href="https://github.com/mnemicon/angular-tour-of-heroes" target="_blank">Tour of Heroes repo</a><br>
-                <a href="https://mnemicon.github.io/scrimba/" target="_blank">Scrimba</a>
-                <a href="https://github.com/mnemicon/scrimba" target="_blank">Scrimba repo</a><br>
-                <!-- <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a>
-                <a href="https://github.com/mnemicon/tuoteluettelo" target="_blank">Tuoteluettelo repo</a><br> -->
+                <div class="sisennys-6rem">
+                    <a href="https://mnemicon.github.io/angular-tour-of-heroes/" target="_blank">Tour of Heroes</a>
+                    <a href="https://github.com/mnemicon/angular-tour-of-heroes" target="_blank">Tour of Heroes repo</a><br>
+                    <a href="https://mnemicon.github.io/scrimba/" target="_blank">Scrimba</a>
+                    <a href="https://github.com/mnemicon/scrimba" target="_blank">Scrimba repo</a><br>
+                    <!-- <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a>
+                    <a href="https://github.com/mnemicon/tuoteluettelo" target="_blank">Tuoteluettelo repo</a><br> -->
+                </div>
     </article>
-    <h3><a href="https://www.w3schools.com">W3</a></h3>
-    <article>
-
+    <article>Quick links<br>
+        <h3 class="sisennys-1rem"><a href="https://www.w3schools.com">W3</a>°
+            <a href="https://www.angular.io">ng</a>°
+            <a href="https://ohjelmointi-20.mooc.fi">JavaMOOC</a>°
+            <a href="https://web-palvelinohjelmointi-21.mooc.fi">WebPMOOC</a></h3>
     </article>
     <footer class="ops">
         <p class="footer-p">&mdash; My Little Portfolio &mdash;</p>
