Update Quick links element

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!-- <a href="https://mnemicon.github.io/responsive-figures/" target="_blank">Images made responsive</a> -->
                 <h3 class="sisennys-4rem">JavaScript- ja TypeScript-ohjelmointi perusteet</h3>
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 1 (HTML), 6vk</h3>
-                <div class="sisennys-6rem"><a href="https://github.com/mnemicon/SantaService" target="_blank">SantaService</a></div>
+                <div class="sisennys-6rem"><a href="https://github.com/mnemicon/SantaService" target="_blank">SantaService (repo only)</a></div>
             <h2 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h2>
                 <h3 class="sisennys-4rem">Spring Boot</h3>
                 <!-- <a href="linkkilista">Projekti 1: Linkkilista</a><br>
@@ -61,8 +61,8 @@
                 </div>
     </article>
     <article>
-        <p>Quick links</p>
-        <h3 class="sisennys-1rem"><a href="https://www.w3schools.com">W3</a>°
+        <h3 class="sisennys-1rem">Quick links <br>
+            <a href="https://www.w3schools.com">W3</a>°
             <a href="https://www.angular.io">ng</a>°
             <a href="https://ohjelmointi-20.mooc.fi">JavaMOOC</a>°
             <a href="https://web-palvelinohjelmointi-21.mooc.fi">WebPMOOC</a>°</h3>
