--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <div class="sisennys-6rem">
                     <a href="https://mnemicon.github.io/angular-tour-of-heroes/" target="_blank">Tour of Heroes</a>
                     <a href="https://github.com/mnemicon/angular-tour-of-heroes" target="_blank">Tour of Heroes repo</a><br>
-                    <a href="https://mnemicon.github.io/scrimba/" target="_blank">Scrimba</a>
-                    <a href="https://github.com/mnemicon/scrimba" target="_blank">Scrimba repo</a><br>
+                    <!-- <a href="https://mnemicon.github.io/scrimba/" target="_blank">Scrimba</a> -->
+                    <a href="https://github.com/mnemicon/scrimba" target="_blank">Scrimba (repo only)</a><br>
                     <!-- <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a>
                     <a href="https://github.com/mnemicon/tuoteluettelo" target="_blank">Tuoteluettelo repo</a><br> -->
                 </div>
@@ -66,6 +66,7 @@
             <a href="https://www.angular.io">ng</a>°
             <a href="https://ohjelmointi-20.mooc.fi">JavaMOOC</a>°
             <a href="https://web-palvelinohjelmointi-21.mooc.fi">WebPMOOC</a>°</h3>
+            <a href="https://fullstackopen.com/">FSOpen</a>°</h3>
     </article>
     <footer class="ops">
         <p class="footer-p">&mdash; My Little Portfolio &mdash;</p>
