Remove extra tag in index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="https://www.w3schools.com">W3</a>°
             <a href="https://www.angular.io">ng</a>°
             <a href="https://ohjelmointi-20.mooc.fi">JavaMOOC</a>°
-            <a href="https://web-palvelinohjelmointi-21.mooc.fi">WebPMOOC</a>°</h3>
+            <a href="https://web-palvelinohjelmointi-21.mooc.fi">WebPMOOC</a>°
             <a href="https://fullstackopen.com/">FSOpen</a>°</h3>
     </article>
     <footer class="ops">
