Update index.html with new link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="kahvikauppa">Projekti 2: Kahvikauppa</a> -->
                 <h3 class="sisennys-4rem">SQL ja tietorakenteet</h3>
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2 (Angular), 8vk</h3>
-                <!-- <a href="hkiapp">Helsinki sights app</a> -->
+                <a href="https://dev.azure.com/s2100644/Ryhm%C3%A4%201%20-%20Ohjelmistokehitysprojekti%202/_git/helsinki_sights">Helsinki sights app</a>
         <h1 class="sisennys-1rem">Angular-ohjelmointi 30 osp</h1>
             <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen komponenttikirjastolla 30 osp</h2>
                 <h3 class="sisennys-4rem">Angular</h3>
@@ -54,8 +54,8 @@
                 <div class="sisennys-6rem">
                     <a href="https://mnemicon.github.io/angular-tour-of-heroes/" target="_blank">Tour of Heroes</a>
                     <a href="https://github.com/mnemicon/angular-tour-of-heroes" target="_blank">Tour of Heroes repo</a><br>
-                    <!-- <a href="https://mnemicon.github.io/scrimba/" target="_blank">Scrimba</a> -->
-                    <a href="https://github.com/mnemicon/scrimba" target="_blank">Scrimba (repo only)</a><br>
+                    <a href="https://mnemicon.github.io/scrimba/" target="_blank">Scrimba</a>
+                    <a href="https://github.com/mnemicon/scrimba" target="_blank">Scrimba (repo)</a><br>
                     <!-- <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a> -->
                     <a href="https://github.com/mnemicon/tuoteluettelo" target="_blank">Tuoteluettelo (repo only)</a><br>
                     <!-- <a href="https://mnemicon.github.io/tuoteluettelo/" target="_blank">Tuoteluettelo</a>
