Add two new links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="kahvikauppa">Projekti 2: Kahvikauppa</a> -->
                 <h3 class="sisennys-4rem">SQL ja tietorakenteet</h3>
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2 (Angular), 8vk</h3>
-                <a href="https://dev.azure.com/s2100644/Ryhm%C3%A4%201%20-%20Ohjelmistokehitysprojekti%202/_git/helsinki_sights">Helsinki sights app</a>
+                <div class="sisennys-6rem"><a href="https://dev.azure.com/s2100644/Ryhm%C3%A4%201%20-%20Ohjelmistokehitysprojekti%202/_git/helsinki_sights">Helsinki sights app (Azure repo)</a></div>
         <h1 class="sisennys-1rem">Angular-ohjelmointi 30 osp</h1>
             <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen komponenttikirjastolla 30 osp</h2>
                 <h3 class="sisennys-4rem">Angular</h3>
@@ -68,7 +68,8 @@
             <a href="https://www.angular.io">ng</a>°
             <a href="https://ohjelmointi-20.mooc.fi">JavaMOOC</a>°
             <a href="https://web-palvelinohjelmointi-21.mooc.fi">WebPMOOC</a>°
-            <a href="https://fullstackopen.com/">FSOpen</a>°</h3>
+            <a href="https://fullstackopen.com/">FSOpen</a>°
+            <a href="https://learn.unity.com/">UnityLrn</a>°</h3>
     </article>
     <footer class="ops">
         <p class="footer-p">&mdash; My Little Portfolio &mdash;</p>
