Add new link to repo and update quick links to open as blanks

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                 <div class="sisennys-6rem"><a href="https://github.com/mnemicon/SantaService" target="_blank">SantaService (repo only)</a></div>
             <h2 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h2>
                 <h3 class="sisennys-4rem">Spring Boot</h3>
-                <!-- <a href="linkkilista">Projekti 1: Linkkilista</a><br>
-                <a href="kahvikauppa">Projekti 2: Kahvikauppa</a> -->
+                <div class="sisennys-6rem">
+                    <!-- <a href="linkkilista">Projekti 1: Linkkilista</a><br> -->
+                    <a href="https://github.com/mnemicon/kahvikauppa">Kahvikauppa (repo only)</a>
+                </div>
                 <h3 class="sisennys-4rem">SQL ja tietorakenteet</h3>
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2 (Angular), 8vk</h3>
                 <div class="sisennys-6rem"><a href="https://dev.azure.com/s2100644/Ryhm%C3%A4%201%20-%20Ohjelmistokehitysprojekti%202/_git/helsinki_sights">Helsinki sights app (Azure repo)</a></div>
@@ -64,12 +66,12 @@
     </article>
     <article>
         <h3 class="sisennys-1rem">Quick links <br>
-            <a href="https://www.w3schools.com">W3</a>°
-            <a href="https://www.angular.io">ng</a>°
-            <a href="https://ohjelmointi-20.mooc.fi">JavaMOOC</a>°
-            <a href="https://web-palvelinohjelmointi-21.mooc.fi">WebPMOOC</a>°
-            <a href="https://fullstackopen.com/">FSOpen</a>°
-            <a href="https://learn.unity.com/">UnityLrn</a>°</h3>
+            <a href="https://www.w3schools.com" target="_blank">W3</a>°
+            <a href="https://www.angular.io" target="_blank">ng</a>°
+            <a href="https://ohjelmointi-20.mooc.fi" target="_blank">JavaMOOC</a>°
+            <a href="https://web-palvelinohjelmointi-21.mooc.fi" target="_blank">WebPMOOC</a>°
+            <a href="https://fullstackopen.com/" target="_blank">FSOpen</a>°
+            <a href="https://learn.unity.com/" target="_blank">UnityLrn</a>°</h3>
     </article>
     <footer class="ops">
         <p class="footer-p">&mdash; My Little Portfolio &mdash;</p>
