Fix broken links

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <h3 class="sisennys-4rem">Spring Boot</h3>
                 <div class="sisennys-6rem">
                     <!-- <a href="linkkilista">Projekti 1: Linkkilista</a><br> -->
-                    <a href="https://github.com/mnemicon/kahvikauppa">Kahvikauppa (repo only)</a>
+                    <a href="https://github.com/mnemicon/kahvikauppa" target="_blank">Kahvikauppa (repo only)</a>
                 </div>
                 <h3 class="sisennys-4rem">SQL ja tietorakenteet</h3>
                 <h3 class="sisennys-4rem">Ohjelmistokehitysprojekti 2 (Angular), 8vk</h3>
-                <div class="sisennys-6rem"><a href="https://dev.azure.com/s2100644/Ryhm%C3%A4%201%20-%20Ohjelmistokehitysprojekti%202/_git/helsinki_sights">Helsinki sights app (Azure repo)</a></div>
+                <div class="sisennys-6rem"><a href="https://dev.azure.com/s2100644/Ryhm%C3%A4%201%20-%20Ohjelmistokehitysprojekti%202/_git/helsinki_sights">Helsinki sights app (Azure repo) target="_blank"</a></div>
         <h1 class="sisennys-1rem">Angular-ohjelmointi 30 osp</h1>
             <h2 class="sisennys-2rem">Ohjelmiston toteuttaminen komponenttikirjastolla 30 osp</h2>
                 <h3 class="sisennys-4rem">Angular</h3>
