--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2 class="sisennys-2rem">Ohjelmistokehittäjänä toimiminen 45 osp</h2>
                 <h3 class="sisennys-4rem">Spring Boot</h3>
                 <div class="sisennys-6rem">
-                    <a href="https://github.com/mnemicon/linkkilista" target="_blank">Projekti 1: Linkkilista (repo only)</a><br> -->
+                    <a href="https://github.com/mnemicon/linkkilista" target="_blank">Projekti 1: Linkkilista (repo only)</a><br>
                     <a href="https://github.com/mnemicon/kahvikauppa" target="_blank">Projekti 2: Kahvikauppa (repo only)</a>
                 </div>
                 <h3 class="sisennys-4rem">SQL ja tietorakenteet</h3>
